kubernetes/apps/TACOS/terrakube-registry/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: terrakube-registry-svc
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: terrakube-registry
  ports:
  - port: 8075
    targetPort: 8075
